--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
 </head>
 <body>
-  <header>
-    header 삽입부
-    <hr>
-  </header>
+  <header th:replace="header :: header"></header>
 
   <main>
     <form>
@@ -70,7 +67,7 @@
     </nav>
   </main>
 
-  <footer>
+  <footer th:replace="footer :: footer">
     <hr>
     footer 삽입부
   </footer>
