--- a/src/main/resources/templates/articles/detail.html
+++ b/src/main/resources/templates/articles/detail.html
@@ -9,6 +9,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="/css/articles/article-content.css" rel="stylesheet">
 </head>
 <body>
     <header id="header"></header>
@@ -21,17 +22,15 @@
         <div class="row g-5">
             <section class="col-md-5 col-lg-4 order-md-last">
                 <aside>
-                    <p><span class="nick-name">Zeus</span></p>
-                    <p><a class="u-url" rel="me" href="w6352800@naver.com">w6352800@naver.com</a></p>
-                    <p>
-                        <time datetime="2022-01-01T00:00:00">2022-01-01</time>
-                    </p>
-                    <p>#java</p>
+                    <p><span>Zeus</span></p>
+                    <p><a href="mailto:w6352800@naver.com">w6352800@naver.com</a></p>
+                    <p><time datetime="2022-01-01T00:00:00">2022-01-01</time></p>
+                    <p><span>#java</span></p>
                 </aside>
             </section>
 
             <article class="col-md-7 col-lg-8">
-                <p>본문<br><br></p>
+                <pre>본문<br><br></pre>
             </article>
         </div>
 
@@ -48,11 +47,12 @@
                     </div>
                 </form>
 
-                <ul>
+                <ul class="row col-7">
                     <li>
                         <div>
-                            <time><small>2022-01-01</small></time>
-                            <strong>Uno</strong>
+                            <strong>Zeus</strong>
+                            <small><time>2022-01-01</time></small>
+
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
                                 Lorem ipsum dolor sit amet
@@ -61,8 +61,8 @@
                     </li>
                     <li>
                         <div>
-                            <time><small>2022-01-01</small></time>
-                            <strong>Uno</strong>
+                            <strong>Zeus</strong>
+                            <small><time>2022-01-01</time></small>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
                                 Lorem ipsum dolor sit amet
