--- a/src/main/resources/templates/articles/detail.html
+++ b/src/main/resources/templates/articles/detail.html
@@ -12,24 +12,27 @@
     <link href="/css/articles/article-content.css" rel="stylesheet">
 </head>
 <body>
-    <header id="header"></header>
+    <header id="header">
+        헤더 삽입부
+        <hr>
+    </header>
 
-    <main class="container">
-        <header class="py-5 text-center">
+    <main id="article-main" class="container">
+        <header id="article-header" class="py-5 text-center">
             <h1>첫번째 글</h1>
         </header>
 
         <div class="row g-5">
             <section class="col-md-5 col-lg-4 order-md-last">
                 <aside>
-                    <p><span>Zeus</span></p>
-                    <p><a href="mailto:w6352800@naver.com">w6352800@naver.com</a></p>
-                    <p><time datetime="2022-01-01T00:00:00">2022-01-01</time></p>
-                    <p><span>#java</span></p>
+                    <p><span id="nickname">Zeus</span></p>
+                    <p><a id="email" href="mailto:w6352800@naver.com">w6352800@naver.com</a></p>
+                    <p><time id="created-at" datetime="2022-01-01T00:00:00">2022-01-01</time></p>
+                    <p><span id="hashtag">#java</span></p>
                 </aside>
             </section>
 
-            <article class="col-md-7 col-lg-8">
+            <article id="article-content" class="col-md-7 col-lg-8">
                 <pre>본문<br><br></pre>
             </article>
         </div>
@@ -47,7 +50,7 @@
                     </div>
                 </form>
 
-                <ul class="row col-7">
+                <ul id="article-comments" class="row col-7">
                     <li>
                         <div>
                             <strong>Zeus</strong>
@@ -93,7 +96,10 @@
 
     </main>
 
-    <footer id="footer"></footer>
+    <footer id="footer">
+        <hr>
+        푸터 삽입부
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
